--- a/input.in
+++ b/input.in
@@ -1,21 +1,7 @@
 inicio programa
 	declaro a, b : int;
-	declaro c, d : text;
-	declaro e, f : float;
-	a -> 2;
-	c -> "hello";
-	ler[a];
-	emitir[l];
-	emitir[3];
-	se [a > b]{
-		a -> 3;
-		senao{
-			se [c < d]{
-				b -> 4;
-			};
-		};
+	a-> 8 + 2 * 3;
+	enquanto [a > 5]{
+		a->4;
 	};
-	enquanto [a > 10]{
-		b -> 10;
-	};
-fim
+fim;
